# ChangeLog for dev-java/jid3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jid3/ChangeLog,v 1.9 2014/02/19 13:55:59 tomwij Exp $

*jid3-0.46-r2 (19 Feb 2014)

  19 Feb 2014; Tom Wijsman <TomWij@gentoo.org> +jid3-0.46-r2.ebuild:
  Revision bump. EAPI 5. Remove test? from RDEPEND. Further style fixes and
  cleanup of ebuild.

  12 Jun 2008; Serkan Kaba <serkan@gentoo.org> -jid3-0.46.ebuild:
  Remove old revision which has failing tests with several JVM's. See bug
  #220245 for more info.

  12 Jun 2008; Christian Faulhammer <opfer@gentoo.org> jid3-0.46-r1.ebuild:
  stable x86, bug 225647

  10 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> jid3-0.46-r1.ebuild:
  amd64 stable, bug #225647

*jid3-0.46-r1 (28 May 2008)

  28 May 2008; Serkan Kaba <serkan@gentoo.org>
  +files/0.46-tests-and-unicode.patch, +jid3-0.46-r1.ebuild:
  Revbump to fix the tests. Fixes bug #220245. Thanks to Jose Quinteiro
  <gentoo@quinteiro.com> for the patch.

  09 May 2008; Christian Faulhammer <opfer@gentoo.org> jid3-0.46.ebuild:
  stable x86, bug 220191

  19 Mar 2008; Vlastimil Babka <caster@gentoo.org> jid3-0.46.ebuild:
  Add ~amd64.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> jid3-0.46.ebuild:
  Restrict junit dependency.

*jid3-0.46 (06 May 2007)

  06 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/0.46-javadoc.patch, +files/0.46-tests.patch, +metadata.xml,
  +jid3-0.46.ebuild:
  Initial addition. Fixes bug #173993. Thanks to Serkan Kaba
  <serkan_kaba@yahoo.com> for the initial ebuild.