@@ -6,17 +6,23 @@ AUX 0.46-tests-and-unicode.patch 17518 SHA256 cfdde9b8bf9e225b16a9828ebd0f957a2f
 AUX 0.46-tests.patch 1029 SHA256 f33b55d7cd45eebe2138053481a530ffc8f8b2177fff7a732fc7ceea7feb5551 SHA512 a28260f1e1666ce109bf06df60d14f0009ef6bd8de906bc4e7f6c0ea39a586e9572564db9b5bf3769730078652d63001e83f0de4e4d0b458ea83ab1b797c80b5 WHIRLPOOL 7bd44e5d704c7a4b4e6a8a2d085ad0535e11c5db8804d212bffe379fae52a13b822879ba6cf0c54bc657e6751bf6165ff6c8c563a5355c415d840ad35a98902d
 DIST jid3_0.46.tar.gz 972609 SHA256 eab5813cf0268c4a114f0ac361e6ffbfc6e233d493cee8a6dba00334b1833491 SHA512 478a78601613ab0e7965145733f1adec10005ef8069deb0595880feb47b065573d66cb5eb2b810869970a6b0272f8fb3363e4946ba5737ad740e372875cfa707 WHIRLPOOL fbe23739d84e8bbc1134780c1788f45a8442ec309bbc9eb92724d4c226dbb0d2b6fdd42a10cb5fc82765423c0b5652a82b2fd11f8a42672bb2048640b6789127
 EBUILD jid3-0.46-r1.ebuild 1405 SHA256 a290eee6514658aea6cf25b45a74623dde2412091083954deba1a135c6aa1892 SHA512 7891f86512dbefc49b07c45305fa921b04ce1200a6f344234289638f5f716c1ae28defa03299a5100c25af745397fb60b4075aa5ba4b657000140a4f78a79308 WHIRLPOOL da04d681fb53e6850fbe421e46c297980341784db063f102e6f9f1bc4c75d07e1de9e81c06ebbfca8a0655f83800277d81c88720bf444dc99ffe09515d765f30
-EBUILD jid3-0.46-r2.ebuild 1379 SHA256 a99a215f02878c88c246c7a7c61a501899adf040b7514d302af3ec1d70d6c021 SHA512 ffd36e08fb681f8c8d678e5b70ee376cdb311ddd127c14d4e0980979b148610378c323ce4b3d98184e4b8a919e3cd3450f48db71c7b497178732ebd2240d5602 WHIRLPOOL a6047c73ed00592a51de447e3c797386beadc1351db5988952f71d7a4563d6cd1901767cd8b3dd27fa8d5dc5138747fdbc4210c4541f4974087b35b9d8a0e9cf
-MISC ChangeLog 1576 SHA256 242be47fbf5a96a41df8a0d11b06e365f11a7b6d0b165fc6b6def2af807c95c3 SHA512 65066e27d2584d872757d9093b8fc2ec3e45ab66633d37746fe622f05e613d639df2bd4a861a1fd0bc1169464ec2d8872c4c0857698fdf75a390a4a51617011e WHIRLPOOL 9e2ff323dc0198a2d04a7d0f47d413fd68eb7d00719f7a6e913b48972d0636e6847c963f1cfd2a7cef55c4773b863c615e3f430c564d34d93b22078f93b8d092
+EBUILD jid3-0.46-r2.ebuild 1375 SHA256 a948e8a58618a8b2bc4dbab551ac9e9abe0f57d1eec4924033499c48850794a1 SHA512 03528fe029527ff2f59ffe6de6b08d3ae5130f582f4ac63d8eefe93e1bdb6328fff9ad975330401abc7500f6a7df38a63d31c3159ddf792fa49636a2f83bef27 WHIRLPOOL 3eae9f132af67e2e0164f2dd0127ee9cd166dba01bf0034cf5f6cd2f036eea58701ff04376a41ba1825503ac75353a96e213c380f3704c0fbce70d5bdc02e9f7
+MISC ChangeLog 1681 SHA256 73ac0489c8dafc663339b2cdc741688f80f11692489aa37eebb5b8dae98ffe62 SHA512 ed2a55755f06d2e612237cd586e08026798d6c2e847d6fb04db3c16dfefdf2c8240b5a372fbaad92e95fb8fe4239dec1f8434020b28bef5eb3521e15a28e7b21 WHIRLPOOL 24f5414f83eaf7c70280b9d8db69840481bd05db5b7a954d2bf853371765c1d2b2714e80ec49e0e3604eca604eb6c6b0784970e6582300a47ff65b7af4e3737b
 MISC metadata.xml 380 SHA256 3fcd1dc78b79a3f996f6a034a36247e90fdeaae1ae8f6ce1de23b834f0dc380b SHA512 2ee31bffbb0482a19d7633c453facfd4ea470354cf36dd31e08996e32c7467721fe2c5a8104f56f90dfc9694e788f7d0f152bda273d6f5d1e9ea1ce8e3f6f255 WHIRLPOOL d34eeea20d088ce638a6884faa4f65107dbb200c0293ea2f851cd6a0aefb12aa49ef9aa42b28ec36ea4b074d537d93543bcab4b23f59377998ad3d60538512e9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTBLfqAAoJEJWyH81tNOV9Ht4H/2RspdhZgFSpuM3td4IRmsBj
-dkenfzvxhfAgt6NMYLc0GdLp60X+DDiuv9sp39pYh0jIwsHEuPs/bY/Ta/59G6cI
-lIjlEJcnR1RSMRwipMXH1IejsbJV0aUVepGlKj7Zi2LCCRkoBhBUjFTRqOlszD8e
-Zpb9+5eZNn8TjLw5U3JDspi3858FAU+52AEhchkEWHwgOnC4RwsTpkGXnslCx0w5
-YgakbxkczgjL/QT4x2y1nMtSZNJhOKt2pcnPGO2ZHG4jJUTNCt+3oUh/TL+nPWca
-zeS84TZRS6HHy5IjAM6Tr8NFxOA/+73gSOot/d+iNs0pUEzzrWWj/mQCXJuuO1c=
-=9tkn
+iQIcBAEBCAAGBQJVFSi7AAoJELp701BxlEWfAXoQAKCllTbRwhKJUDJiN6RTX6Gr
+O0AjcAKv5c550s+QYj5j4N8JAyE8FtIDjlaD9kaKFYcC42Zl4KKayC8cNJhOCVDc
+xjwoJKL/BaSNlTMPkP45XnrY8NA6Ij5ZZesMtfS81Cne1BdxPkpH71C1TvUBOWkg
+vdlq9EM8pjjd6lLULW8ZKPdYljGkcp9yBVEcELUgr/kJ2KZWwXryo7IHd7/HwqCe
+5D8lLKz1h6w8Kbu19qS+Q+hCsgQ8thcss1jLcgrNEOPxMz6UuM2suf7l6AgXDGyu
+VzWcb0/2JA8XmG514j8fc61Iw0Wyn6gbZ3OEGB9uwO/Qe5NPfjSzxtfniPYR1tMf
+rdO304pxxiqDe4iHiAxxF2RpQ0qXnBP6op/xkHpIouO+NXKwRaKwTOFaMe79v/5D
+OUZgdm2K5qh8mFdJ4kfs3CAs8i0YzRos5VtAY6ZDWtfMzlv8PVbgsYwLRcwRikur
+gqgdlgZOjop87eKY8FcS0glcOtOBhsMoc5h5IBSozef6NH3UU6NZwYGpXX+q/uNN
+FOqt1S2v+sWKMLFj7bU5KgB5VOplpSV+t1XgGqDQnboGEoztyXtnjCvneKQbCEER
+UGrHgFdvjoC97GBhgPgRUWwejNNG6IM5Nk2pN9EKyPN6vYNoMFbvWG3LRSDw0+0U
+G1AeoeAhJeR7aQzwob/J
+=+JTQ
 -----END PGP SIGNATURE-----
